--- a/crawler/templates/main.html
+++ b/crawler/templates/main.html
@@ -18,7 +18,7 @@ a:hover, a:active {
 </style>
 </head>
 <body>
-<a href="http://10.128.37.137/entry">entry</a><br/><br/>
-<a href="http://10.128.37.137/crawler">crawled_urls</a><br/><br/>
+<a href="http://localhost/entry">entry</a><br/><br/>
+<a href="http://localhost/crawler">crawled_urls</a><br/><br/>
 </body>
 </html>
